Set the height, width should take up 100%. #1

--- a/source/assets/stylesheets/app.scss
+++ b/source/assets/stylesheets/app.scss
@@ -1,2 +1,13 @@
 @import "bourbon";
 @import "neat";
+
+html,
+body {
+  margin: 0;
+  height: 100vh;
+}
+
+.header {
+  height: 60px;
+  width: 100%;
+}
