--- a/source/assets/stylesheets/app.scss
+++ b/source/assets/stylesheets/app.scss
@@ -76,8 +76,23 @@ li a:hover {
   position: relative;
   float: right;
   right: 250px;
-  width: 200px;
+  width: 180px;
   height: 50px;
   top: 20px;
   background-color: #464544;
+}
+
+#twitter-logo {
+  color: #6dddde;
+  font-size: 30px;
+  padding: 9px 0 0 25px;
+}
+
+#twitter-text {
+  color: #6dddde;
+  position: absolute;
+  font-size: 16px;
+  width: 100%;
+  left: 65px;
+  top: -2px;
 }
