--- a/source/assets/stylesheets/app.scss
+++ b/source/assets/stylesheets/app.scss
@@ -125,3 +125,16 @@ li a:hover {
   width: 100%;
   height: 600px;
 }
+
+#main-image {
+  width: 100%;
+  height: auto;
+}
+
+#django {
+  position: relative;
+  width: 500px;
+  height: 600px;
+  float: right;
+  background-color: lighten(blue, 50);
+}
