--- a/source/assets/stylesheets/app.scss
+++ b/source/assets/stylesheets/app.scss
@@ -24,7 +24,7 @@ body {
 ul {
   list-style-type: none;
   margin: 0;
-  margin-top: 22px;
+  margin-top: 13px;
   padding: 0;
   overflow: hidden;
 }
@@ -37,7 +37,7 @@ li a {
   display: block;
   color: white;
   text-align: center;
-  padding: 14px;
+  padding: 14px 8px 14px 14px;
   text-decoration: none;
 }
 
@@ -47,7 +47,7 @@ li a:hover {
 
 #header {
   position: relative;
-  height: 70px;
+  height: 60px;
   width: 100%;
   background: #1c1d1c;
   opacity: 0.9;
@@ -59,15 +59,15 @@ li a:hover {
   position: absolute;
   margin: 0;
   width: 940px;
-  height: 70px;
+  height: 60px;
 }
 
 #logo {
   position: relative;
   float: left;
   width: 100px;
-  height: 68px;
-  top: 13px;
+  height: 58px;
+  top: 5px;
   margin: 0;
   font-size: 35px;
   color: #9ca0a6;
@@ -81,29 +81,29 @@ li a:hover {
   position: relative;
   float: right;
   right: 250px;
-  width: 180px;
-  height: 50px;
+  width: 160px;
+  height: 40px;
   top: 20px;
   background-color: #464544;
 }
 
 #twitter-logo {
   color: #6dddde;
-  font-size: 30px;
-  padding: 9px 0 0 25px;
+  font-size: 26px;
+  padding: 8px 0 0 23px;
 }
 
 #twitter-text {
   color: #6dddde;
   position: absolute;
-  font-size: 16px;
+  font-size: 12px;
   width: 100%;
-  left: 65px;
-  top: -2px;
+  left: 60px;
+  top: -1px;
 }
 
 #red-box {
-  @include container(50px, 50px);
+  @include container(40px, 40px);
 
   background-color: #e24b31;
   position: relative;
@@ -132,9 +132,12 @@ li a:hover {
 }
 
 #django {
-  position: relative;
-  width: 500px;
+  position: absolute;
+  width: 700px;
   height: 600px;
   float: right;
+  right: 740px;
+  top: 0;
   background-color: lighten(blue, 50);
+  z-index: -1;
 }
