--- a/source/assets/stylesheets/app.scss
+++ b/source/assets/stylesheets/app.scss
@@ -134,13 +134,13 @@ li a:hover {
 
 #django {
   position: absolute;
-  width: 700px;
-  height: 600px;
+  width: 100%;
+  height: 800px;
   float: right;
-  right: 740px;
   top: 0;
   background-color: lighten(blue, 50);
   z-index: -1;
+  overflow: hidden;
 }
 
 #catch {
@@ -149,5 +149,5 @@ li a:hover {
   color: #d93a2f;
   line-height: 60px;
 
-  @include center(35%, 54.5%)
+  @include center(26.2%, 26.5%)
 }
