--- a/source/assets/stylesheets/app.scss
+++ b/source/assets/stylesheets/app.scss
@@ -151,3 +151,15 @@ li a:hover {
 
   @include center(26.2%, 26.5%)
 }
+
+#tarantino {
+  position: absolute;
+  font-family: sans-serif;
+  letter-spacing: 0;
+  font-size: 16px;
+  font-weight: lighter;
+  color: #b7b8b7;
+  line-height: 20px;
+
+  @include center(41.4%, 30.5%)
+}
