--- a/source/assets/stylesheets/app.scss
+++ b/source/assets/stylesheets/app.scss
@@ -229,3 +229,12 @@ li a:hover {
     border-right: 5px solid #f8f9f8;
   }
 }
+
+#footer {
+  position: relative;
+  top: 9px;
+  height: 800px;
+  width: 100%;
+  background-color: #1c1d1c;
+  bottom: 0;
+}
