Add a container for Envoy intro. #5

--- a/source/assets/stylesheets/app.scss
+++ b/source/assets/stylesheets/app.scss
@@ -238,3 +238,10 @@ li a:hover {
   background-color: #1c1d1c;
   bottom: 0;
 }
+
+#intro {
+  @include center(13.5%, 50.5%);
+
+  position: absolute;
+  width: 940px;
+}
