--- a/source/assets/stylesheets/app.scss
+++ b/source/assets/stylesheets/app.scss
@@ -245,3 +245,12 @@ li a:hover {
   position: absolute;
   width: 940px;
 }
+
+#sentence {
+  font-family: sans-serif;
+  color: #fefffe;
+  font-weight: 550;
+  font-size: 34px;
+  letter-spacing: 0;
+  line-height: 32px;
+}
