Add We are Envoy next to the paragraph in red. #5

--- a/source/assets/stylesheets/app.scss
+++ b/source/assets/stylesheets/app.scss
@@ -254,3 +254,12 @@ li a:hover {
   letter-spacing: 0;
   line-height: 32px;
 }
+
+#we-are-envoy {
+  font-family: sans-serif;
+  color: #d6563a;
+  font-weight: 550;
+  font-size: 34px;
+  letter-spacing: 0;
+  line-height: 32px;
+}
