--- a/source/assets/stylesheets/app.scss
+++ b/source/assets/stylesheets/app.scss
@@ -24,7 +24,7 @@ body {
 #nav-menu {
   list-style-type: none;
   margin: 0;
-  margin-top: 13px;
+  margin-top: 14px;
   padding: 0;
   overflow: hidden;
 }
@@ -68,8 +68,7 @@ li a:hover {
   float: left;
   width: 100px;
   height: 56px;
-  top: 5px;
-  margin: 0;
+  margin: 3px 0 0;
   font-size: 35px;
   color: #9ca0a6;
 }
