Add "View All Work" text next to Featured Work. #5

--- a/source/assets/stylesheets/app.scss
+++ b/source/assets/stylesheets/app.scss
@@ -297,3 +297,11 @@ li a:hover {
   letter-spacing: 0;
   top: 16px;
 }
+
+#view-work {
+  padding-left: 10px;
+  font-size: 13px;
+  font-family: sans-serif;
+  color: #d6563a;
+  text-decoration: none;
+}
