Add paragraph for each photos. #5

--- a/source/assets/stylesheets/app.scss
+++ b/source/assets/stylesheets/app.scss
@@ -322,5 +322,19 @@ li a:hover {
 }
 
 .last {
-  margin: 20px 0 0 0;
+  margin: 20px 0 0;
+}
+
+.work-title {
+  width: 300px;
+  margin-top: 11px;
+  font-size: 18px;
+  font-family: sans-serif;
+  letter-spacing: 0.5px;
+  color: #fefffe;
+  font-weight: 400;
+}
+
+.blue-text {
+  color: #77d1d0;
 }
