--- a/source/assets/stylesheets/app.scss
+++ b/source/assets/stylesheets/app.scss
@@ -327,7 +327,7 @@ li a:hover {
 
 .work-title {
   width: 300px;
-  margin-top: 11px;
+  margin: 11px 0 0;
   font-size: 18px;
   font-family: sans-serif;
   letter-spacing: 0.5px;
@@ -337,4 +337,15 @@ li a:hover {
 
 .blue-text {
   color: #77d1d0;
+}
+
+.work-text {
+  width: 300px;
+  margin: 4px 0 0;
+  font-size: 12.5px;
+  font-weight: 400;
+  font-family: sans-serif;
+  color: #9fa09f;
+  letter-spacing: 0.7px;
+  line-height: 18px;
 }
