--- a/source/assets/stylesheets/app.scss
+++ b/source/assets/stylesheets/app.scss
@@ -349,3 +349,11 @@ li a:hover {
   letter-spacing: 0.7px;
   line-height: 18px;
 }
+
+.view-project {
+  font-size: 12px;
+  font-family: sans-serif;
+  font-weight: 400;
+  color: #d6563a;
+  margin: 6px 0 0;
+}
