--- a/source/assets/stylesheets/app.scss
+++ b/source/assets/stylesheets/app.scss
@@ -232,7 +232,7 @@ li a:hover {
 #footer {
   position: relative;
   top: 9px;
-  height: 800px;
+  height: 1200px;
   width: 100%;
   background-color: #1c1d1c;
   bottom: 0;
@@ -243,11 +243,11 @@ li a:hover {
 
   position: relative;
   width: 940px;
-  height: 800px;
+  height: 1200px;
 }
 
 #intro {
-  @include center(13.5%, 50.5%);
+  @include center(9%, 50.5%);
 
   position: absolute;
   width: 940px;
@@ -272,7 +272,7 @@ li a:hover {
 }
 
 #divider {
-  @include center(24.5%, 50.5%);
+  @include center(16.2%, 50.5%);
 
   height: 5px;
   width: 940px;
@@ -296,6 +296,19 @@ li a:hover {
   color: #a4a5a4;
   letter-spacing: 0;
   top: 13px;
+}
+
+#wire {
+  position: relative;
+  font-family: sans-serif;
+  font-size: 22px;
+  font-weight: 400;
+  margin: 0;
+  padding-left: 4px;
+  color: #a4a5a4;
+  letter-spacing: 0;
+  top: 73px;
+  float: left;
 }
 
 #view-work {
