Add date underneath the news title. #5

--- a/source/assets/stylesheets/app.scss
+++ b/source/assets/stylesheets/app.scss
@@ -393,4 +393,16 @@ li a:hover {
   color: #fefffe;
   letter-spacing: 0;
   line-height: 34px;
+  margin-bottom: 1px;
+}
+
+#blue {
+  color: #66d8d9;
+}
+
+.date {
+  margin: 0;
+  font-family: sans-serif;
+  letter-spacing: 0;
+  color: #9b9c9b;
 }
