Add "Read More" underneath each dates. #5

--- a/source/assets/stylesheets/app.scss
+++ b/source/assets/stylesheets/app.scss
@@ -406,3 +406,10 @@ li a:hover {
   letter-spacing: 0;
   color: #9b9c9b;
 }
+
+.read-more {
+  margin: 4px 0;
+  font-family: sans-serif;
+  letter-spacing: 0;
+  color: #d6563a;
+}
